# EARTH

./: .gitignore  README.md  pyproject.toml
examples/: chol_and_solve.ipynb  confidence.ipynb  example_complex_multidim.py  example_linear.py  example_sine.py  example_weights.py  generating_confidence_bands.ipynb  linear_reg_test.ipynb  non_uniform_sample_space.ipynb  simple_example.ipynb  test.py  test_fast.py  test_fast_big.py
src/earth/: __init__.py  _basis_function.py  _basis_function_fast.py  _cholesky_update.py  _forward_pass.py  _forward_pass_fast.py  _knot_search.py  earth.py  earth_slow.py
src/earth/data/: generate.py  y.csv
src/npearth/: __init__.py  _backward_pass.py  _basis_function.py  _basis_function_fast.py  _cholesky_update.py  _forward_pass.py  _forward_pass_fast.py  _knotsearcher_base.py  _knotsearcher_cholesky.py  _knotsearcher_cholesky_numba.py  _knotsearcher_svd.py  earth.py  earth_slow.py
src/npearth/data/: bx.csv  high_dimensional_spline_data.csv  intermediate_sine_data.csv  intermediate_sine_data_noisy.csv  test_X.pickle  test_model.pickle  test_y.pickle
tests/: test__basis_function.py  test_earth.py
