[tool.poetry]
name = "npyearth"
version = "0.1.0"
description = "A package for the EARTH model for python in numpy"
authors = ["Bjarke Geza Solyom Høgdall <bjarke@hogdall.dk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"  # Adjust as necessary
numpy = "^1.21.0"  # Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
